# resume_ats_scorer

./: .pre-commit-config.yaml  Dockerfile  FTD review.md  FTD.md  MaintainencePlan.md  Monitoring Plan.md  QA_Testing_Result.md  SDET Test Cases.md  UserStories.md  code.md  code_review.md  deployment_plan.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  security_review.md  setup.py
.github/workflows/: ci-cd.yml  docker-build-push.yml  pypi-publish.yml
docs/: scoring_mechanism.md
resume_ats_scorer/: Dockerfile
resume_ats_scorer/agents/: job_description_parser.py  keyword_analyst.py  matching_algorithm.py  recommendation_engine.py  resume_parser.py
resume_ats_scorer/api/: main.py
resume_ats_scorer/api/models/: schemas.py
resume_ats_scorer/api/routes/: __init__.py  job_description_routes.py  resume_routes.py  scoring_routes.py
resume_ats_scorer/core/: config.py  crew_manager.py  crew_manger.py  exceptions.py  logging.py
resume_ats_scorer/models/: schemas.py
resume_ats_scorer/utils/: agents.py  file_handlers.py  scoring.py  text_processors.py
tests/: conftest.py  test_api.py  test_resume_parser.py
tests/test_agents/: test_agents.py
tests/test_api/: test_api.py
tests/test_utils/: test_utils.py
